# goldfish

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ui-spec.md
scripts/goldfish/: README.md  cli.py  goldfish.py  pyproject.toml  requirements.txt
scripts/goldfish/config/: agent_profile.json  external_tools.json  keywords.json  llm_prompts.json  people.json  rag.json  response_formats.json  search_providers.json  settings.json  sources.json  tool_intents.json
scripts/goldfish/modules/: __init__.py  agent_kernel.py  agent_loop.py  agent_memory.py  classifier.py  cli_theme.py  command_router.py  config_loader.py  conversation_agent.py  dashboard_updater.py  deduplicator.py  doctor_view.py  external_cli.py  feedback_tracker.py  feishu_qr_setup.py  github_trending_fetcher.py  insight_extractor.py  intent_router.py  knowledge_suggester.py  llm_summarizer.py  model_setup.py  notifier.py  obsidian_writer.py  paper_fetcher.py  people_watcher.py  product_fetcher.py  rag_client.py  report_generator.py  response_formatter.py  rss_fetcher.py  scorer.py  search_engine.py  setup_agent.py  skill_loader.py  skill_router.py  source_health.py  startup_cmd95.py  startup_image.py  startup_page.py  state_store.py  (+8 more)
scripts/goldfish/modules/pixel_sprites/: __init__.py  colors.py  state_idle.py  state_reading.py  state_run.py  state_search.py  state_thinking.py
scripts/goldfish/templates/: daily_report_template.md
scripts/goldfish/tests/: test_basic.py
scripts/goldfish/tools/: generate_startup_assets.py
(+41 files in other folders)
