[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "goldfish"
version = "0.1.0"
description = "Goldfish AI intelligence and knowledge deposition agent for an Obsidian vault"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "feedparser",
  "openai",
  "rich",
  "Pillow",
  "qrcode[pil]"
]

[project.scripts]
goldfish = "cli:main"

[tool.setuptools]
py-modules = ["cli", "goldfish"]
packages = ["modules", "modules.providers"]

[tool.setuptools.package-data]
modules = ["assets/startup/*.png"]
